# memory_share

./: .ai_directive  .aiignore  .env.example  .gitignore  .kitignore  AGENTS.md  AGENT_CONTEXT.md  AGENT_INSTRUCTIONS.md  AGENT_PLAYBOOK.md  AMP-0001.md  API.md  ARCHITECTURE.md  ARCHITECTURE_FREEZE.md  CHANGELOG.md  CONTRIBUTING.md  EXECUTION_GRAPH.md  EXECUTION_GRAPH_BLUEPRINT.md  GEMINI.md  LICENSE  MANIFEST.in  MANIFESTO.md  MCP_DELIVERY_SUMMARY.md  README.md  REFERENCE.md  SCHEMA.md  SHARE_NOTES.md  SKILLS_COMPRESSION_10X.md  SPEC.md  STABILITY.md  SYSTEM_CONTRACT.md  TIER2_TO_PRODUCTION_SUMMARY.md  Taskfile.yml  V1_RELEASE_CHECKLIST.md  VANTAGE.SEAL  VANTAGE_CONTRACT.md  VANTAGE_INTEGRATION_MAP.md  VERSION  demo_memory.db  final.err  gemini_tools.md  (+37 more)
.antigravity/memory/: journal.jsonl
.github/workflows/: ci.yml  publish-pypi.yml  verify-engine.yml
.kit/: context
.kit/schemas/: shared_schema.yaml
.kit/skills/: README.md  SPEC.md  architecture_investigate.yaml  architecture_review.yaml  architecture_summary.yaml  kit_audit.md
.kit_test_session/global/: global_brain.db-shm  router_decisions.jsonl
.memory_share_kit/: atlas_v1.db
.tmp_context_smoke/: worker.py
.vantage/: outstream.jsonl  soak_stream.jsonl
_archived_docs/: RELEASE_WORKFLOW.md  V1_RELEASE_NOTES.md
brain/exports/: neural_memory_architecture.md
brain/mcp/: SETUP_GUIDE.md  SKILL.md  antigravity-brain.skill  antigravity_mcp.py
brain/ops/: brain_maintenance.py  brain_sync_watcher.py  layer3_backfill.py  layer3_metadata.py  query_layer3.py  search.ps1
docs/: ADVANCED_AGENT_QUERIES.md  AGENT_BOOTSTRAP.md  ARCHITECTURE.md  ARCHITECTURE_FREEZE.md  ARCHITECTURE_MEMORY_PIPELINE.md  DESIGN_HISTORY.md  DEVELOPMENT_GUIDE.md  KIT_MCP_SERVER.md  LEARNING_LOOP.md  LIMITATIONS.md  MIGRATION.md  README.md  RELEASE.md  RULES.md  SPECIFICATION.md  TITANIUM_V1.2.5.md  architecture.md  playbook.md  reference.md  walkthrough.md
docs/archive/: ARCHITECTURE_GRAPH_SLICE_INCREMENTAL.md  ARCHITECTURE_MASTER_DIAGRAM.md  ARCHITECTURE_TIER2.md  ARCHITECTURE_V2_FINAL_SPEC.md  ARCHITECTURE_V2_LOCKED.md  ARCHITECTURE_VISUALIZATION.py  ARCHITECTURE_WATCHDOG_DESIGN.md  ARCHITECTURE_WATCHDOG_GUIDE.md  KIT_COMPLETE_SYSTEM.md  KIT_DEPLOYMENT_VERIFICATION.md  KIT_FILE_INDEX.md  KIT_FINAL_MANIFEST.md  KIT_FINAL_SUMMARY.md  KIT_INTEGRATION_MAP.md  KIT_MATURITY_ANALYSIS.md  KIT_MCP_QUICKSTART.md  KIT_QUICK_REFERENCE.md  MEMORY_KIT_INTEGRATION_AUDIT.md  QUICKSTART_GRAPH_SLICE.py  README.md  V2_IMPLEMENTATION_GUIDE.md  V2_PROJECT_COMPLETION.md
docs/engines/: GRAPH_AND_INDEXING.md
docs/guides/: DEPLOYMENT.md  DEVELOPER_GUIDE.md  REFERENCE.md
docs/integrations/: vantage.md
docs/milestones/: IMPLEMENTATION_COMPLETE.md  SKILLS_IMPLEMENTATION.md  TIER2_IMPLEMENTATION_SUMMARY.md  TIER2_MATURITY_ASSESSMENT.md
examples/: README.md  chunked_cog_scan.py  minimal_example.py
kit/: __init__.py  __main__.py  api.py  architecture.yaml  flow_vantage_bridge.py  graph_store.py  indexer.py  kernel.py  main.py  runtime_init_backup.py  scanner.py  schema.py
kit/adapters/: memory_adapter.py
kit/analysis/: bridge.py  importance.py  integrity.py  risk_engine.py  security_lens.py
kit/cih/: signal_extractor.py
kit/cli/: __init__.py  adaptive_trainer.py  auto_route.py  doctor.py  main.py
kit/coherence/: coherence_engine.py
kit/context/: builder.py
kit/core/: __init__.py  adapters.py  architecture_watchdog.py  ast_parser.py  coherence_schema.py  command_registry.py  command_routes.py  consistency_validator.py  context_compiler.py  contract.py  deterministic.py  deterministic_context.py  dispatcher.py  drift_repair.py  exceptions.py  execution_trace.py  file_system.py  kernel.py  (+50 more)
kit_test_dir/: atlas_v1.db
memory_share_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
plugins/: __init__.py  code-py-314.yaml
reports/: ARCHITECTURE_LOCKED.md  antigravity_v3_kernel.md  brain_state_current.md  brain_v2_update_roadmap.md  cowork_integration_session.md  journaling_driver_spec.md  layer3_metadata_schema.md  semantic_memory_topology.md  wal_delivery_model.md
runtime/: ast_parser.py  cognitive_driver.py  distiller.py  journal_engine.py  kernel.py  lock_manager.py  paging_engine.py  test_lock.py
scripts/: audit.py  auto_migrator.py  bench_atlas.py  benchmark_compression.py  benchmark_v123_pro.py  ci_repro.ps1  ci_repro.sh  clean_repo.py  clean_room_check.py  db_audit.py  db_audit_deep.py  db_audit_fts.py  distilled_essence.json  epoch_archive.py  fix_core.py  friction_pack_v124.json  governance_ingest.py  ingest_repo.py  install_global_kit.ps1  install_hooks.py  invariant_checker.py  invariant_suite_v123.py  kitf.ps1  migrate_tests.py  migration_v1_2_4_PATCHED.sql  normalize.py  pre_release_check.py  precommit.sh  preflight_release.py  prune_dag_compiler.py  prune_executor.py  release_verification.py  release_verification_legacy.py  release_verify_v123.py  run_replay.ps1  run_stress_test.py  setup_hooks.py  shadow_prune.ps1  simulate_real_usage.py  simulate_real_usage_lightning.py  (+8 more)
test_plugin_root/: AGENTS.md  kit-test.bat
test_repo_root/: AGENTS.md
tests/: __init__.py  behavioral_report.md  conftest.py  cross_lang_audit.py  golden_arbitration.json  golden_arbitration_v1_2_4.json  soak_test_v124.py  stress_memory_write.py  stress_test_report.md  test_agent_cli.py  test_amsb_core.py  test_architectural_invariants.py  test_architecture_lock.py  test_architecture_watchdog.py  test_behavioral_execution.py  test_calibration.py  test_cases.jsonl  test_cli.py  test_cognitive_harness.py  test_cognitive_kernel.py  test_consistency_validator.py  test_deterministic.py  test_deterministic_router.py  test_dispatcher.py  test_drift_repair.py  test_dual_model_consistency.py  test_execution_models.py  test_execution_trace.py  test_flow_core.py  test_flow_surface.py  test_flow_v124_core.py  test_flow_v125_core.py  test_freeze_guard.py  test_fts.py  test_golden_path.py  test_graph_slice_and_incremental.py  test_graph_slice_integration_benchmark.py  test_grounding.py  test_kernel.py  test_kernel_engine.py  (+37 more)
tools/: vantage_adapter.py
(+196 files in other folders)
