[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "memory-share-kit"
version = "1.2.3"
description = "Deterministic memory and governance for developers and AI agents."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Chief Architect", email = "architect@memory-share.kit"}
]
keywords = ["ai", "agents", "memory", "sqlite", "graph", "deterministic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.31.0"]

[project.scripts]
kit = "kit.cli.main:main"
kit-agent = "kit_agent.cli.main:main"
kit-ingest = "scripts.governance_ingest:ingest_governance"

[tool.hatch.build.targets.wheel]
packages = ["kit", "kit_agent", "runtime", "scripts"]
include = [
    "kit/**/*.py",
    "kit_agent/**/*.py",
    "runtime/**/*.py",
    "scripts/**/*.py",
    "kit_agent/data/*",
    "AGENTS.md"
]

[tool.hatch.build.targets.sdist]
include = [
    "kit/",
    "kit_agent/",
    "runtime/",
    "scripts/",
    "AGENTS.md",
    "README.md",
    "pyproject.toml"
]

[tool.ruff]
line-length = 120
target-version = "py314"
lint.select = ["E", "F", "B", "UP", "I", "N", "W"]
lint.ignore = [
    "E501",  # line too long
    "W291",  # trailing whitespace (allowed in SQL for readability)
    "W293",  # blank line contains whitespace (allowed in SQL for readability)
    "UP035",  # deprecated typing.Dict (legacy code)
    "UP006",  # deprecated typing.Dict (legacy code)
    "UP045",  # deprecated X | None syntax (legacy code)
    "F401",  # unused imports (legacy code)
    "F811",  # redefined (legacy code)
    "E402",  # module level import not at top (legacy code)
    "N806",  # variable naming (legacy code)
    "E741",  # ambiguous variable (legacy code)
]
exclude = [
    ".git",
    "archive",
    "__pycache__",
    "build",
    "dist",
]

[tool.coverage.run]
branch = true
source = ["kit", "runtime"]
omit = ["*/tests/*", "*/archive/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
include = ["kit", "runtime", "examples", "plugins"]
exclude = ["archive", "**/__pycache__"]
strict = ["kit", "runtime"]
