[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "memory-share-kit"
version = "1.2.4"
description = "Deterministic memory and governance for developers and AI agents."
readme = "AGENTS.md"
requires-python = ">=3.14,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Chief Architect", email = "architect@memory-share.kit"}
]
keywords = ["ai", "agents", "memory", "sqlite", "graph", "deterministic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.350",
]


[project.scripts]
kit = "kit.cli.main:main"
kit-agent = "kit_agent.cli.main:main"
kit-vantage = "scripts.vantage_shim:main"
kit-ingest = "scripts.governance_ingest:ingest_governance"

[tool.hatch.envs.default]
python = "3.14.4"
dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.350",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check ."
typecheck = "pyright"

[tool.hatch.build.targets.wheel]
packages = ["kit", "kit_agent", "runtime", "scripts"]
include = [
    "kit/**/*.py",
    "kit_agent/**/*.py",
    "runtime/**/*.py",
    "scripts/**/*.py",
    "kit_agent/data/*",
    "AGENTS.md",
    "bootstrap_agent.yaml"
]

[tool.hatch.build.targets.wheel.shared-data]
"AGENTS.md" = "share/memory_share_kit/AGENTS.md"
"scripts/kitf.ps1" = "share/memory_share_kit/scripts/kitf.ps1"
"bootstrap_agent.yaml" = "share/memory_share_kit/bootstrap_agent.yaml"

[tool.hatch.build.targets.sdist]
include = [
    "kit/",
    "kit_agent/",
    "runtime/",
    "scripts/",
    "AGENTS.md",
    "pyproject.toml"
]

[tool.ruff]
line-length = 120
target-version = "py314"
# IDE Performance: Debounce diagnostics to keep Antigravity IDE lag-free
lint.preview = true
lint.select = ["E", "F", "B", "UP", "I", "N", "W"]
lint.ignore = [
    "E501",  # line too long
    "W291",  # trailing whitespace (allowed in SQL for readability)
    "W293",  # blank line contains whitespace (allowed in SQL for readability)
    "F401",  # unused imports (legacy code)
    "F811",  # redefined (legacy code)
    "E402",  # module level import not at top (legacy code)
    "N806",  # variable naming (legacy code)
]
exclude = [
    ".git",
    "archive",
    "__pycache__",
    "build",
    "dist",
]

[tool.coverage.run]
branch = true
source = ["kit", "runtime"]
omit = ["*/tests/*", "*/archive/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
include = ["kit", "runtime", "examples", "plugins"]
exclude = ["archive", "**/__pycache__"]
strict = ["kit", "runtime"]
pythonVersion = "3.14"
executionEnvironments = [
  { root = "kit", pythonVersion = "3.14" },
  { root = "runtime", pythonVersion = "3.14" }
]
# IDE Performance: Hint for async diagnostics
# debounce = 500

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive_v123", "__pycache__", ".git", "adversarial", "benchmark"]
python_files = ["test_*.py"]
