[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "memory-share-kit"
version = "1.2.5"
description = "Deterministic memory and governance for developers and AI agents."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = {file = "LICENSE"}
authors = [
    {name = "Chief Architect", email = "architect@memory-share.kit"}
]
keywords = ["ai", "agents", "memory", "sqlite", "graph", "deterministic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.350",
]


[project.scripts]
kit = "kit.cli.main:main"
kit-agent = "kit.cli.main:main"
kit-vantage = "scripts.vantage_shim:main"
kit-runtime = "kit.runtime.entrypoint:main"

[tool.hatch.envs.default]
python = "3.14.4"
dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.350",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check ."
typecheck = "pyright"

[tool.hatch.build.targets.wheel]
packages = ["kit", "scripts"]
include = [
    "kit/**/*.py",
    "kit/**/*.json",
    "kit/**/*.lock",
    "scripts/**/*.py",
    "scripts/hooks/*",
    "AGENTS.md",
    "GEMINI.md",
    "README.md",
    "LICENSE",
    "VERSION",
    "bootstrap_agent.yaml"
]

[tool.setuptools.package-data]
kit = ["kit-test-gate.yaml"]

[tool.hatch.build.targets.wheel.shared-data]
"AGENTS.md" = "share/memory_share_kit/AGENTS.md"
"GEMINI.md" = "share/memory_share_kit/GEMINI.md"
"bootstrap_agent.yaml" = "share/memory_share_kit/bootstrap_agent.yaml"
"kit/core/schema_default.json" = "share/memory_share_kit/schema_default.json"

[tool.hatch.build.targets.sdist]
include = [
    "kit/",
    "scripts/",
    "AGENTS.md",
    "GEMINI.md",
    "README.md",
    "LICENSE",
    "VERSION",
    "bootstrap_agent.yaml",
    "pyproject.toml"
]

[tool.ruff]
line-length = 120
target-version = "py314"
# IDE Performance: Debounce diagnostics to keep Antigravity IDE lag-free
lint.preview = true
lint.select = ["E", "F", "B", "UP", "I", "N", "W"]
lint.ignore = [
    "E501",  # line too long
    "W291",  # trailing whitespace (allowed in SQL for readability)
    "W293",  # blank line contains whitespace (allowed in SQL for readability)
    "F401",  # unused imports (legacy code)
    "F811",  # redefined (legacy code)
    "E402",  # module level import not at top (legacy code)
    "N806",  # variable naming (legacy code)
]
exclude = [
    ".git",
    "archive",
    "__pycache__",
    "build",
    "dist",
]

[tool.coverage.run]
branch = true
source = ["kit"]
omit = ["*/tests/*", "*/archive/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
include = ["kit", "examples", "plugins"]
exclude = ["archive", "**/__pycache__"]
strict = ["kit"]
pythonVersion = "3.14"
executionEnvironments = [
  { root = "kit", pythonVersion = "3.14" }
]
# IDE Performance: Hint for async diagnostics
# debounce = 500

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive_v123", "__pycache__", ".git", "adversarial", "benchmark", "research", "perf"]
python_files = ["test_*.py"]

[tool.kit.governance]
declared_class = "A"
vantage_required = true
write_boundary = "strict"
model = "CAL-v1.2.5"
